k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeintel
  namespace: kubeintel
  labels:
    app: kubeintel
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: kubeintel
